<resources>
    <string name="app_name">App Filmes Netflix</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="precisa_de_ajuda">Precisa de ajuda?</string>
    <string name="cadastrar">Novo por aqui? Inscreva-se agora.</string>
    <string name="ajuda">AJUDA</string>
    <string name="tudo_pronto">Tudo pronto para \n assistir?</string>
    <string name="informe_seu_email">Informe seu e-mail para criar ou acessar  \n conta.</string>
    <string name="vamos_la">VAMOS LÁ</string>
    <string name="continuar">CONTINUAR</string>
    <string name="create_google">Entrar com conta google</string>
    <string name="google_server_client_id" translatable="false">122958840552-74640si82rr8pdrkm9vjnu26lqib9q61.apps.googleusercontent.com</string>
    <string name="series">Séries</string>
    <string name="filmes">Filmes</string>
    <string name="minha_lista">Minha Lista</string>
    <string name="sair">Sair</string>
    <string name="filmes_populares">Filmes Populares</string>
    <string name="filmes_acao">Filmes de Ação</string>
    <string name="filmes_aventura">Aventura</string>
    <string name="filmes_comedia">Comédia</string>

</resources>