<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.FormCadastro">

<LinearLayout
    android:id="@+id/container_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajuda"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/txt_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tudo_pronto"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/txt_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_seu_email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_cd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorColor="@color/light_gray"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_cd_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorColor="@color/light_gray"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cd_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_vamos_la"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vamos_la"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/bt_continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        android:visibility="gone"
        />

</LinearLayout>
</androidx.core.widget.NestedScrollView>