<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".view.FormLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        app:cursorColor="@color/red"
        android:padding="5dp"
        app:boxStrokeColor="@color/red"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/red"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_box"
            android:padding="25dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        app:cursorColor="@color/red"
        app:boxStrokeColor="@color/red"
        app:boxStrokeWidthFocused="1dp"
        android:padding="5dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/edit_box"
            android:padding="25dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button_entrar"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/txt_ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precisa_de_ajuda"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/txt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

</LinearLayout>
</androidx.core.widget.NestedScrollView>